--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -336,172 +336,169 @@
                             android:textColor="@color/text6"
                             android:layout_marginTop="@dimen/dp_9"/>
                     </LinearLayout>
-
                 </LinearLayout>
-            <ScrollView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-                <LinearLayout
+                <com.scwang.smartrefresh.layout.SmartRefreshLayout
+                    android:id="@+id/refreshLayout"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-                <ImageView
-                    android:id="@+id/fg_mine_iv_jihuo"
+                    android:layout_height="match_parent">
+                <android.support.v4.widget.NestedScrollView
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/dp_70"
-                    android:layout_marginRight="@dimen/dp_12"
-                    android:layout_marginLeft="@dimen/dp_12"
-                    android:src="@drawable/mine_middle_title"/>
+                    android:layout_height="match_parent">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:descendantFocusability="blocksDescendants">
+                    <ImageView
+                        android:id="@+id/fg_mine_iv_jihuo"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/dp_70"
+                        android:layout_marginRight="@dimen/dp_12"
+                        android:layout_marginLeft="@dimen/dp_12"
+                        android:src="@drawable/mine_middle_title"/>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/dp_73"
+                        android:orientation="horizontal">
 
-                <!--<view-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="@dimen/dp_1"-->
-                    <!--android:background="@color/background"-->
-                    <!--android:layout_marginTop="@dimen/dp_10"></view>-->
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/dp_73"
-                    android:orientation="horizontal">
+                        <LinearLayout
+                            android:id="@+id/fg_mine_ll_my_wallet"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:orientation="vertical"
+                            android:gravity="center">
+                            <ImageView
+                                android:layout_width="@dimen/dp_40"
+                                android:layout_height="@dimen/dp_40"
+                                android:src="@drawable/mine_my_wallet"/>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="我的钱包"
+                                android:textColor="@color/text3"
+                                android:textSize="@dimen/sp_12"
+                                android:layout_marginTop="@dimen/dp_6"/>
+                        </LinearLayout>
+                        <LinearLayout
+                            android:id="@+id/fg_mine_ll_my_store"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:orientation="vertical"
+                            android:gravity="center">
+                            <ImageView
+                                android:layout_width="@dimen/dp_40"
+                                android:layout_height="@dimen/dp_40"
+                                android:src="@drawable/mine_my_store"/>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="我的店铺"
+                                android:textColor="@color/text3"
+                                android:textSize="@dimen/sp_12"
+                                android:layout_marginTop="@dimen/dp_6"/>
+                        </LinearLayout>
+                        <LinearLayout
+                            android:id="@+id/fg_mine_ll_my_attestation"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:orientation="vertical"
+                            android:gravity="center">
+                            <ImageView
+                                android:layout_width="@dimen/dp_40"
+                                android:layout_height="@dimen/dp_40"
+                                android:src="@drawable/mine_my_renzheng"/>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="我的认证"
+                                android:textColor="@color/text3"
+                                android:textSize="@dimen/sp_12"
+                                android:layout_marginTop="@dimen/dp_6"/>
+                        </LinearLayout>
+                    </LinearLayout>
 
                     <LinearLayout
-                        android:id="@+id/fg_mine_ll_my_wallet"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:orientation="vertical"
-                        android:gravity="center">
-                        <ImageView
-                            android:layout_width="@dimen/dp_40"
-                            android:layout_height="@dimen/dp_40"
-                            android:src="@drawable/mine_my_wallet"/>
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="我的钱包"
-                            android:textColor="@color/text3"
-                            android:textSize="@dimen/sp_12"
-                            android:layout_marginTop="@dimen/dp_6"/>
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/dp_73"
+                        android:orientation="horizontal">
+
+                        <LinearLayout
+                            android:id="@+id/fg_mine_ll_my_offlinestore"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:orientation="vertical"
+                            android:gravity="center">
+                            <ImageView
+                                android:layout_width="@dimen/dp_40"
+                                android:layout_height="@dimen/dp_40"
+                                android:src="@drawable/mine_xianxaidian"/>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="线下门店"
+                                android:textColor="@color/text3"
+                                android:textSize="@dimen/sp_12"
+                                android:layout_marginTop="@dimen/dp_6"/>
+                        </LinearLayout>
+                        <LinearLayout
+                            android:id="@+id/fg_mine_ll_my_supply"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:orientation="vertical"
+                            android:gravity="center">
+                            <ImageView
+                                android:layout_width="@dimen/dp_40"
+                                android:layout_height="@dimen/dp_40"
+                                android:src="@drawable/mine_my_gongqiu"/>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="我的供求"
+                                android:textColor="@color/text3"
+                                android:textSize="@dimen/sp_12"
+                                android:layout_marginTop="@dimen/dp_6"/>
+                        </LinearLayout>
+                        <LinearLayout
+                            android:id="@+id/fg_mine_ll_help"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:orientation="vertical"
+                            android:gravity="center">
+                            <ImageView
+                                android:layout_width="@dimen/dp_40"
+                                android:layout_height="@dimen/dp_40"
+                                android:src="@drawable/mine_kefu"/>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="帮助与客服"
+                                android:textColor="@color/text3"
+                                android:textSize="@dimen/sp_12"
+                                android:layout_marginTop="@dimen/dp_6"/>
+                        </LinearLayout>
                     </LinearLayout>
-                    <LinearLayout
-                        android:id="@+id/fg_mine_ll_my_store"
-                        android:layout_width="0dp"
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="猜你喜欢"
+                        android:textSize="@dimen/sp_16"
+                        android:textColor="@color/text3"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="@dimen/dp_13"/>
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/fg_mine_rv_like"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:orientation="vertical"
-                        android:gravity="center">
-                        <ImageView
-                            android:layout_width="@dimen/dp_40"
-                            android:layout_height="@dimen/dp_40"
-                            android:src="@drawable/mine_my_store"/>
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="我的店铺"
-                            android:textColor="@color/text3"
-                            android:textSize="@dimen/sp_12"
-                            android:layout_marginTop="@dimen/dp_6"/>
-                    </LinearLayout>
-                    <LinearLayout
-                        android:id="@+id/fg_mine_ll_my_attestation"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:orientation="vertical"
-                        android:gravity="center">
-                        <ImageView
-                            android:layout_width="@dimen/dp_40"
-                            android:layout_height="@dimen/dp_40"
-                            android:src="@drawable/mine_my_renzheng"/>
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="我的认证"
-                            android:textColor="@color/text3"
-                            android:textSize="@dimen/sp_12"
-                            android:layout_marginTop="@dimen/dp_6"/>
-                    </LinearLayout>
+                        android:layout_marginTop="@dimen/dp_13"/>
                 </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/dp_73"
-                    android:orientation="horizontal">
-
-                    <LinearLayout
-                        android:id="@+id/fg_mine_ll_my_offlinestore"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:orientation="vertical"
-                        android:gravity="center">
-                        <ImageView
-                            android:layout_width="@dimen/dp_40"
-                            android:layout_height="@dimen/dp_40"
-                            android:src="@drawable/mine_xianxaidian"/>
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="线下门店"
-                            android:textColor="@color/text3"
-                            android:textSize="@dimen/sp_12"
-                            android:layout_marginTop="@dimen/dp_6"/>
-                    </LinearLayout>
-                    <LinearLayout
-                        android:id="@+id/fg_mine_ll_my_supply"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:orientation="vertical"
-                        android:gravity="center">
-                        <ImageView
-                            android:layout_width="@dimen/dp_40"
-                            android:layout_height="@dimen/dp_40"
-                            android:src="@drawable/mine_my_gongqiu"/>
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="我的供求"
-                            android:textColor="@color/text3"
-                            android:textSize="@dimen/sp_12"
-                            android:layout_marginTop="@dimen/dp_6"/>
-                    </LinearLayout>
-                    <LinearLayout
-                        android:id="@+id/fg_mine_ll_help"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:orientation="vertical"
-                        android:gravity="center">
-                        <ImageView
-                            android:layout_width="@dimen/dp_40"
-                            android:layout_height="@dimen/dp_40"
-                            android:src="@drawable/mine_kefu"/>
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="帮助与客服"
-                            android:textColor="@color/text3"
-                            android:textSize="@dimen/sp_12"
-                            android:layout_marginTop="@dimen/dp_6"/>
-                    </LinearLayout>
-                </LinearLayout>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="猜你喜欢"
-                    android:textSize="@dimen/sp_16"
-                    android:textColor="@color/text3"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="@dimen/dp_13"/>
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/fg_mine_rv_like"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/dp_280"
-                    android:layout_marginTop="@dimen/dp_13"/>
-            </LinearLayout>
-            </ScrollView>
+            </android.support.v4.widget.NestedScrollView>
+                </com.scwang.smartrefresh.layout.SmartRefreshLayout>
         </LinearLayout>
 </LinearLayout>
