--- a/app/src/main/res/layout/activity_pre_sell.xml
+++ b/app/src/main/res/layout/activity_pre_sell.xml
@@ -50,6 +50,7 @@
 
     </LinearLayout>
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
+        android:id="@+id/refreshLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     <android.support.v7.widget.RecyclerView
