--- a/app/src/main/res/layout/activity_referrer.xml
+++ b/app/src/main/res/layout/activity_referrer.xml
@@ -74,7 +74,7 @@
             android:textSize="@dimen/sp_15"
             android:textColor="@color/text3"
             android:layout_gravity="center"
-            android:text="手机号：18435224024"/>
+            android:text="手机号：xxxxxxxxxx"/>
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -92,7 +92,7 @@
                 android:text="联系"/>
             <TextView
                 android:id="@+id/ac_referrer_tv_change"
-                android:textColor="@color/white"
+                android:textColor="@color/text3"
                 android:background="@color/line"
                 android:textSize="@dimen/sp_15"
                 android:layout_width="@dimen/dp_105"
