--- a/app/src/main/res/layout/activity_store.xml
+++ b/app/src/main/res/layout/activity_store.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/background">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_138"
@@ -75,7 +76,6 @@
         </LinearLayout>
     </LinearLayout>
     <LinearLayout
-
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_80"
         android:background="@drawable/white_conner_5"
