--- a/app/src/main/res/layout/fragment_seckill_list.xml
+++ b/app/src/main/res/layout/fragment_seckill_list.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     tools:context=".ui.fragment.SecKillFragment">
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
+        android:id="@+id/refreshLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <android.support.v7.widget.RecyclerView
@@ -16,5 +17,4 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </com.scwang.smartrefresh.layout.SmartRefreshLayout>
-
 </FrameLayout>
