--- a/app/src/main/res/layout/fragment_shoppingcart.xml
+++ b/app/src/main/res/layout/fragment_shoppingcart.xml
@@ -121,6 +121,7 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="15dp"
+            android:background="@drawable/gray_conner_2"
             android:text="结算"
             android:textColor="#ffffff"
             android:textSize="16dp"
