--- a/app/src/main/res/layout/popupwindow_goods_size.xml
+++ b/app/src/main/res/layout/popupwindow_goods_size.xml
@@ -14,13 +14,15 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_20"
-            android:background="@android:color/darker_gray"/>
+            android:alpha="0.4"
+            android:background="@android:color/black"/>
         <ImageView
             android:id="@+id/pop_goods_size_iv_pic"
             android:layout_width="@dimen/dp_80"
             android:layout_height="@dimen/dp_80"
             android:layout_marginBottom="@dimen/dp_10"
             android:layout_marginLeft="@dimen/dp_12"
+            android:scaleType="fitXY"
             android:src="@mipmap/ic_launcher"/>
         <TextView
             android:id="@+id/pop_goods_size_tv_old_price"
@@ -96,6 +98,7 @@
     </RelativeLayout>
 
     <RelativeLayout
+        android:id="@+id/pw_goodsSize_rl_toVip"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_30"
         android:background="#d4f1ee">
@@ -107,6 +110,7 @@
             android:layout_marginLeft="@dimen/dp_10"
             android:src="@drawable/pop_goods_detail_lingdang"/>
         <TextView
+            android:id="@+id/pw_goodsSize_tv_toVIP"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="成为农品街代言人此单立省403元"
